# service-manager

./: Dockerfile  README.md  pyproject.toml  requirements.txt  sonar-project.properties  tox.ini
.github/workflows/: build.yml
app/: app.py  config.py  log_config.yaml  main.py  models.py  utils.py
tests/: test_main.py  test_models.py  test_utils.py
