[tool.poetry]
name = "service-manager"
version = "0.1.0"
description = ""
authors = ["Piotr <piotr.wolinski.2017@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
openapi3-parser = "^1.1.17"
httpx = "^0.27.0"
uvicorn = "^0.28.0"
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"
python-multipart = "^0.0.9"


[tool.poetry.group.dev.dependencies]
coverage = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
